--- a/index.css
+++ b/index.css
@@ -3,7 +3,15 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f2f5;
 }
-
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 90%;
+    max-width: 1600px;
+    padding-top: 70px;
+    margin-top: 60px;
+}
 .task-container {
     background: white;
     border-radius: 8px;
@@ -11,7 +19,7 @@ body {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     margin-top: 30px;
-    margin-left: 150px;
+    margin-left: 30px;
 }
 
 .task-container h2 {
@@ -57,8 +65,10 @@ body {
 .kanban {
     display: flex;
     gap: 20px;
-    padding: 20px;
+    padding: 0px;
     justify-content: center;
+    margin-top: 20px;
+    margin-left: 30px;
 }
 
 .column {
